# fountain_transfer

./: Cargo.toml  PUBLISH.md  README.md
fountain_transfer/: Cargo.toml  README.md
fountain_transfer/src/: lib.rs  main.rs  net.rs  protocol.rs  receiver.rs  sender.rs  session.rs
fountain_transfer/tests/: loopback_transfer.rs
fountain_transfer_core/: Cargo.toml  README.md
fountain_transfer_core/src/: lib.rs  rfc5053_codec.rs  rfc5053_layout.rs  rfc6330_codec.rs  rfc6330_layout.rs  rfc6330_mapping.rs
fountain_transfer_core/tests/: rfc5053_codec_roundtrip.rs  rfc6330_codec_roundtrip.rs
